avancée dans le cours

--- a/Exercice4Tripadvisor_encours.ipynb
+++ b/Exercice4Tripadvisor_encours.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,16 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "from sentence_transformers import SentenceTransformer\n",
     "from sklearn.decomposition import LatentDirichletAllocation\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from transformers import pipeline\n",
     "from wordcloud import WordCloud, STOPWORDS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +72,9 @@
    "source": [
     "# Download nltk components\n",
     "nltk.download(\"punkt\")\n",
-    "nltk.download('stopwords')"
+    "nltk.download('stopwords')\n",
+    "\n",
+    "pipe = pipeline(\"text-classification\", model=\"nlptown/bert-base-multilingual-uncased-sentiment\")"
    ]
   },
   {
